--- a/module2/index.html
+++ b/module2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignments</title>
 	<link rel="stylesheet" type="text/css"
-	href="module2-main.css"/>
+	href="main.css"/>
 </head>
 <body>
     <h1>Our Menu</h1>
