--- a/module2/index.html
+++ b/module2/index.html
@@ -14,21 +14,21 @@
             <div class="section">
                 <h2 class="chicken">Chicken</h2>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamus odit cumque, ipsum earum odio rem commodi, repudiandae, recusandae dicta. Minus at et alias hic quisquam quis in. Possimus suscipit iusto quo?</p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamus odit quo?</p>
             </div>
         </div>
          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="section">
                 <h2 class="beef">Beef</h2>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamus odit cumque, ipsum earum odio rem commodi, repudiandae, recusandae dicta. Minus at et alias hic quisquam quis in. Possimus suscipit iusto quo?</p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamus odit quo?</p>
             </div>
         </div>
          <div class="col-lg-4 col-sm-12">
             <div class="section">
                 <h2 class="sushi">Sushi</h2>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamus odit cumque, ipsum earum odio rem commodi, repudiandae, recusandae dicta. Minus at et alias hic quisquam quis in. Possimus suscipit iusto quo?</p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic doloribus error, voluptatum corporis quae cum neque. Provident incidunt eos quaerat architecto harum laborum rerum nihil vel tempora accusamu quo?</p>
             </div>
         </div>
 
